tries to fix modal close button issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -574,6 +574,7 @@ body {
 }
 
 .button--icon {
+  padding: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
@@ -1242,6 +1243,7 @@ body {
   width: 100%;
   max-height: 30px;
   height: 100%;
+  padding: 0;
 }
 
 .network-list {
