--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -100,6 +100,7 @@
 }
 
 .button--icon {
+  padding: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
