--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -35,4 +35,5 @@
   width: 100%;
   max-height: 30px;
   height: 100%;
+  padding: 0;
 }
